正式版第二版

--- a/pages/index/index.scss
+++ b/pages/index/index.scss
@@ -24,12 +24,12 @@
             margin: 28rpx 10rpx 28rpx 28rpx;
         }
         .comname {
-            font-size: 24rpx;
+            font-size: 28rpx;
             color: #FFFFFF;
             margin-right: 10rpx;
         }
         .username {
-            font-size: 24rpx;
+            font-size: 28rpx;
             color: #FFFFFF;
         }
         .center {
@@ -43,7 +43,7 @@
             }
             .top-subtitle {
                 font-family: PingFangSC-Regular;
-                font-size: 20rpx;
+                font-size: 28rpx;
                 color: #FFFFFF;
                 letter-spacing: 0;
             }
@@ -56,16 +56,17 @@
             .top-time {
                 opacity: 0.5;
                 font-family: PingFangSC-Regular;
-                font-size: 20rpx;
+                font-size: 28rpx;
                 color: #FFFFFF;
                 letter-spacing: 0;
             }
         }
     }
+    
     .count-tabel {
         width: 716rpx;
         // height: 110rpx;
-        height: 55px;
+        height: 65px;
         background-color: #fff;
         box-shadow: 0 20rpx 20rpx 0 rgba(0, 0, 0, 0.05);
         .count-tabel-item {
@@ -84,6 +85,7 @@
                 color: #E3A33D;
                 letter-spacing: 0;
                 font-weight: bold;
+                padding-left: 22rpx;
             }
             .out-num {
                 font-family: PingFangSC-Semibold;
@@ -91,6 +93,7 @@
                 color: #206DE7;
                 letter-spacing: 0;
                 font-weight: bold;
+                padding-left: 22rpx;
             }
         }
         .split-line {
@@ -150,11 +153,31 @@
                         width: 114rpx;
                         margin-right: 28rpx;
                     }
+                    .list-item-title1 {
+                        font-family: PingFangSC-Regular;
+                        font-size: 28rpx;
+                        color: #A0A0A0;
+                        letter-spacing: 0;
+                        margin-right: 2em;
+                    }
+                    .list-item-title2 {
+                        font-family: PingFangSC-Regular;
+                        font-size: 28rpx;
+                        color: #A0A0A0;
+                        letter-spacing: 0;
+                        margin-right: 28rpx;
+                    }
                     .list-item-content {
                         font-family: PingFangSC-Medium;
                         font-size: 28rpx;
                         color: #4A4A4A;
                         letter-spacing: 0;
+                    }
+                    .company{
+                        max-width: 200px;
+                        overflow: hidden;
+                        text-overflow: ellipsis;
+                        white-space: nowrap;
                     }
                     image {
                         width: 28rpx;
