--- a/pages/setting/setting.wxss
+++ b/pages/setting/setting.wxss
@@ -36,6 +36,10 @@
   font-size: 40rpx !important;
 }
 
+.van-action-sheet__cancel, .van-action-sheet__item {
+  color: #D8D8D8;
+}
+
 .container {
   background-color: #fff;
 }
