--- a/pages/login/login.wxml
+++ b/pages/login/login.wxml
@@ -1,4 +1,4 @@
-<view class="container flexc0c" style="background:url('http://192.168.2.227:8004/wechat-finance/image/Login.png') no-repeat;background-size:100vw 80vh">
+<view class="container flexc0c" style="background:url('http://static.zzkyt.cn/wechat-finance/image/Login.png') no-repeat;background-size:100vw 80vh">
     <van-nav-bar title="登录" />
     <view class="title-box flexc0c">
         <view class="title">欢迎使用</view>
